--- a/module-3/12-Capstone/java/src/main/webapp/css/site.css
+++ b/module-3/12-Capstone/java/src/main/webapp/css/site.css
@@ -51,7 +51,16 @@ li {
 	list-style-type: none;
 }
 
-.body-text {
+.body-home {
 	padding-left: 60px;
 	padding-right: 60px;
+}
+
+.park-list {
+	display: grid;
+	width: 100%;
+	grid-template-columns: 45% 45%;
+	grid-row-gap: 10px;
+	background-color: #edf2f5;
+	color: #444;
 }
