--- a/module-3/12-Capstone/java/src/main/webapp/css/site.css
+++ b/module-3/12-Capstone/java/src/main/webapp/css/site.css
@@ -13,7 +13,7 @@ body {
 .header-img {
 	background-color: #edf2f5;
 	padding: 20px;
-	padding-left: 70px;
+	padding-left: 130px;
 }
 
 .container {
@@ -21,7 +21,7 @@ body {
 	font-size: 20px;
 	background-color: #3d3d3d;
 	width: 100%;
-	padding-left: 70px;
+	padding-left: 130px;
 }
 
 .container p {
@@ -52,15 +52,30 @@ li {
 }
 
 .body-home {
-	padding-left: 60px;
-	padding-right: 60px;
+	padding: 120px;
 }
 
 .park-list {
+	padding-bottom: 155px; 
 	display: grid;
+	align-items: start;
 	width: 100%;
-	grid-template-columns: 45% 45%;
+	grid-template-columns: 50% 40%;
 	grid-row-gap: 10px;
 	background-color: #edf2f5;
 	color: #444;
+}
+
+.park-picture {
+	width: 93%;
+}
+
+.home-name {
+
+	font-family: 'Francois One', sans-serif;
+}
+
+.home-description {
+	font-size: 17px; 
+	line-height: 1.5em;
 }
